--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bz-util": "^2.1.0",
+    "mongodb": "^3.0.1",
     "regenerator-runtime": "^0.11.1"
   },
   "devDependencies": {
