--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.17.1",
     "bz-util": "^2.1.0",
     "mongodb": "^3.0.1",
+    "node-flags": "^0.1.9",
     "regenerator-runtime": "^0.11.1"
   },
   "devDependencies": {
@@ -32,11 +33,11 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bz-define": "0.0.1",
     "bz-zip": "^1.1.11",
