--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "babel-preset-typescript": "^7.0.0-alpha.19",
     "babel-runtime": "^6.26.0",
     "bz-define": "0.0.1",
     "bz-zip": "^1.1.11",
